2010-07-28  Oliver Hader  <oliver@typo3.org>

	* Raised Extbase and Fluid from 1.2.0 to 1.2.1
	* Fixed bug #14953: XSS in (new) taskcenter (thanks to Georg Ringer)
	* Fixed bug #14978: XSS in file tree (thanks to Georg Ringer)
	* Fixed bug #13292: TYPO3 error message reveals path to web root (thanks to Xavier Perseguers)

2010-07-27  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14920: Cache cannot be cleared in IE8
	* Fixed bug #15252: Bug: Backend shortcut cannot be set in IE8
	* Fixed bug #15218: [Feature] Possible Replace of Contrib Libraries
	* Fixed bug #15228: Links in TS object browser tree forget the breakkpoint
	* Fixed bug #14946: Switching workplaces causes nesting of BE (Thanks to Stefan Galinski)
	* Fixed bug #13649: Deprecated function sql_regcase in cms/tslib/class.tslib_pagegen.php (Thanks to Martin Müller)

2010-07-27  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15147: Inconsistent icon usage for Edit Page Properties (thanks to Georg Ringer)

2010-07-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15244: htmlArea RTE: textearea Id may not be unique in FE
	* Fixed bug #15250: htmlArea RTE: FE additionalJS_post javascript may be displayed as HTML text
	* Fixed bug #15121: htmlArea RTE: Javascript Error in IE7 prevent Link dialogue from opening
	* Fixed bug #14859: htmlArea RTE won't load in backend extension

2010-07-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #15221: Add hook to postprocess upload of a file

2010-07-27  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15196: [caching framework] Speedup t3lib_cache_backend_DbBackend::has($entryIdentifier) (Thanks to Michael Knabe)
	* Fixed bug #13060: t3lib_htmlmail: Deprecated message with PHP 5.3 for sql_regcase (Thanks to Martin Müller)

2010-07-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15243: htmlArea RTE: Extension stylesheets refer to incorrect selectors

2010-07-26  Steffen Kamper  <steffen@typo3.org>
