@@ -4,6 +4,7 @@
 	* Fixed bug #14953: XSS in (new) taskcenter (thanks to Georg Ringer)
 	* Fixed bug #14978: XSS in file tree (thanks to Georg Ringer)
 	* Fixed bug #13292: TYPO3 error message reveals path to web root (thanks to Xavier Perseguers)
+	* Fixed bug #11618: XSS vulnerability in install tool / BE login (thanks to Georg Ringer)
 
 2010-07-27  Steffen Kamper  <steffen@typo3.org>
 
